--- a/src/Chat/elm-chat-server.cabal
+++ b/src/Chat/elm-chat-server.cabal
@@ -5,7 +5,7 @@ synopsis:           WebSocket server for Elm Chat application
 description:        A simple WebSocket server that handles chat messaging for the Elm Examples Hub.
 homepage:           https://github.com/stamnostomp/elm-example-sites
 license:            MIT
-license-file:       ../../LICENSE
+-- Removed license-file reference that was causing the build error
 author:             Dunedin
 maintainer:         example@example.com
 category:           Web
@@ -14,12 +14,16 @@ extra-source-files: CHANGELOG.md
 
 executable elm-chat-server
     main-is:            Server.hs
-    build-depends:      base ^>=4.14.0.0
-                      , websockets ^>=0.12.7.3
-                      , text ^>=1.2.4.1
-                      , aeson ^>=2.0.3.0
-                      , containers ^>=0.6.5.1
-                      , time ^>=1.11.1.1
+
+    -- More relaxed dependencies that will work with different GHC versions
+    build-depends:      base >=4.14 && <5
+                      , websockets >=0.12 && <0.13
+                      , text >=1.2 && <3.0
+                      , aeson >=1.5 && <3.0
+                      , containers >=0.6 && <0.8
+                      , time >=1.9 && <1.13
+                      , bytestring >=0.10 && <0.12
+
     hs-source-dirs:     .
     default-language:   Haskell2010
     ghc-options:        -Wall -threaded -rtsopts -with-rtsopts=-N
